# minitube

./: .clang-format  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json  minitube
.cache/clangd/index/: home.cpp.8E01AD4EE688890F.idx  home.hpp.E1BFE6546D627F55.idx  main.cpp.B4D7E9C05C402A95.idx  tab.cpp.18FC4D3FB5A7BAD1.idx  tab.hpp.99894E29F05D51A4.idx  tui.cpp.84A96F14833D18CB.idx  tui.hpp.53504BA59D4EE9DA.idx  utils.cpp.45295A4B0A6C52CA.idx  utils.hpp.F021DABBAAC8A801.idx
.clangd/index/: extractor.cpp.9447022090FC6F28.idx  extractor.hpp.F0A2310DB879CA11.idx  main.cpp.B4D7E9C05C402A95.idx  requests.cpp.1ABEFA86639F5639.idx  requests.hpp.B71B555DBDB41883.idx  tui.hpp.53504BA59D4EE9DA.idx  video.hpp.9F94130CE7369F9A.idx  videx.cpp.6DEBE39BF32A30C8.idx  videx.hpp.06D2B68E98BB766F.idx
src/: main.cpp
src/tui/: tui.cpp  tui.hpp  utils.cpp  utils.hpp
src/tui/tabs/: home.cpp  home.hpp  related.cpp  related.hpp  search.cpp  search.hpp  tab.cpp  tab.hpp  video_tab.cpp  video_tab.hpp
